# minecrust

./: .gitignore  Makefile  scratch.rs
.agents/skills/minecrust-dev/: SKILL.md
crates/minecrust-asset-cli/: Cargo.toml
crates/minecrust-asset-cli/src/: extractor.rs  main.rs  models.rs  packer.rs  resolver.rs  serializer.rs
crates/minecrust-client/: Cargo.toml
crates/minecrust-client/src/: app.rs  asset_loader.rs  entity_meshes.rs  game.rs  lan.rs  lang.rs  main.rs  state.rs  steve.rs  ui.rs
crates/minecrust-engine/: Cargo.toml
crates/minecrust-engine/src/: camera.rs  deferred.wgsl  hecs_test.rs  lib.rs  metal_rt.rs  renderer.rs  shader.wgsl  ui.rs  window.rs
crates/minecrust-engine/src/audio/: mod.rs
crates/minecrust-engine/src/core/: events.rs  mod.rs  task.rs
crates/minecrust-engine/src/input/: mod.rs
crates/minecrust-engine/src/physics/: mod.rs
crates/minecrust-engine/src/shaders/: raytrace.metal
crates/minecrust-engine/src/systems/: animation.rs  mod.rs  player.rs  transform.rs
crates/minecrust-engine/src/world/: chunk.rs  generator.rs  lod.rs  lod_mesher.rs  mesher.rs  mod.rs  player.rs  prefab.rs
crates/minecrust-server/: Cargo.toml
crates/minecrust-server/src/: lib.rs  main.rs  server.rs
crates/minecrust-shared/: Cargo.toml
crates/minecrust-shared/src/: lib.rs  physics.rs  protocol.rs
crates/minecrust-shared/src/ecs/: animation.rs  mesh.rs  mod.rs  player.rs  transform.rs
crates/minecrust-shared/src/world/: block.rs  chunk.rs  generator.rs
docs/architecture/: ecs_design.md  overview.md  refactoring_plan.md
docs/assets/: pipeline.md
docs/crates/minecrust-asset-cli/: cli_usage.md  json_structures.md
docs/crates/minecrust-engine/: engine_loop.md  rendering.md
docs/network/: protocol.md
scripts/: download_assets.py
