[package]
name = "minecrust-client"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
bincode = "1.3.3"
env_logger = "0.11.10"
glam = "0.32.1"
log = "0.4.29"
minecrust-engine = { version = "0.1.0", path = "../minecrust-engine" }
minecrust-shared = { version = "0.1.0", path = "../minecrust-shared" }
pollster = "0.4.0"
wgpu = "0.19.3"
winit = "0.30.13"
