[package]
name = "minecrust-client"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
bincode = "1.3.3"
crossbeam-channel = "0.5.15"
env_logger = "0.11.10"
glam = "0.32.1"
log = "0.4.29"
minecrust-engine = { version = "0.1.0", path = "../minecrust-engine" }
minecrust-shared = { version = "0.1.0", path = "../minecrust-shared" }
minecrust-server = { version = "0.1.0", path = "../minecrust-server" }
pollster = "0.4.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
ureq = "2.12.1"
wgpu = "22.1.0"
winit = "0.30.13"
laminar = "0.5.0"
bytemuck = "1.25.0"
hecs = "0.11.0"
sysinfo = "0.30"
