[package]
name = "minecrust-engine"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
bytemuck = { version = "1.25.0", features = ["derive"] }
crossbeam-channel = "0.5.15"
egui = "0.29.1"
egui-wgpu = "0.29.1"
egui-winit = "0.29.1"
env_logger = "0.11.10"
glam = "0.32.1"
hecs = "0.11.0"
kira = "0.12.0"
log = "0.4.29"
noise = "0.9.0"
pollster = "0.4.0"
wgpu = "22.1.0"
winit = "0.30.13"
