[package]
name = "minecrust-server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
crossbeam-channel = "0.5.15"
glam = { version = "0.32.1", features = ["serde"] }
hecs = "0.11.0"
log = "0.4.29"
minecrust-shared = { version = "0.1.0", path = "../minecrust-shared" }
minecrust-engine = { version = "0.1.0", path = "../minecrust-engine" }
laminar = "0.5.0"
bincode = "1.3.3"
env_logger = "0.11.10"
